[package]
name = "rgx"
version = "1.0.0"
edition = "2024"
authors = ["Your Name <your@email.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/anshul-ab17/rgx"
repository = "https://github.com/anshul-ab17/rgx"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.18.3"
log = "0.4"
env_logger = "0.11"
